# zeta_framework_3

./: CMakeLists.txt
example/: CMakeLists.txt
example/assets/: packing_instrs.json
example/src/: entry.c  entry.cpp  game.c  game.cpp  game.h  level_one.c  level_two.c  player.h  scenes.h  title_screen.c  world.c
zeta_framework_3/: CMakeLists.txt
zeta_framework_3/include/: zf3.h  zf3_assets.h  zf3_audio.h  zf3_game.h  zf3_local.h  zf3_misc.h  zf3_public.h  zf3_rand.h  zf3_renderer.h  zf3_rendering.h  zf3_shader_progs.h  zf3_window.h
zeta_framework_3/src/: zf3_assets.c  zf3_assets.cpp  zf3_audio.cpp  zf3_game.c  zf3_game.cpp  zf3_l_rendering.cpp  zf3_lm_assets.cpp  zf3_misc.cpp  zf3_rand.cpp  zf3_renderer.cpp  zf3_rendering.c  zf3_rendering.cpp  zf3_rendering_s.cpp  zf3_s_rendering.cpp  zf3_scenes.c  zf3_shader_progs.cpp  zf3_sm_assets.cpp  zf3_sm_rendering.cpp  zf3_window.c  zf3_window.cpp  zf3_window_l.cpp  zf3_window_s.cpp
zf3/: CMakeLists.txt
zf3/include/: zf3.h
zf3/src/: zf3_assets.c  zf3_game.c  zf3_rendering.c  zf3_scenes.c  zf3_utils.c  zf3_window.c
zf3_asset_packer/: CMakeLists.txt
zf3_asset_packer/src/: main.c  zf3_asset_packer_main.c  zf3_asset_packer_shared.h  zf3_asset_packer_textures.c  zf3ap.h  zf3ap_audio.cpp  zf3ap_fonts.cpp  zf3ap_main.c  zf3ap_main.cpp  zf3ap_textures.c  zf3ap_textures.cpp
zf3_common/: CMakeLists.txt
zf3_common/include/: zf3_common.h  zf3c.h  zf3c_assets.h  zf3c_collections.h  zf3c_debugging.h  zf3c_math.h  zf3c_mem.h  zf3c_misc.h
zf3_common/src/: zf3_common_logging.c  zf3_common_math.c  zf3_common_mem.c  zf3_common_misc.c  zf3c_debugging.cpp  zf3c_logging.c  zf3c_logging.cpp  zf3c_math.c  zf3c_math.cpp  zf3c_mem.c  zf3c_mem.cpp  zf3c_misc.c  zf3c_misc.cpp
